<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SOS Do It</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_profile">Profile</string>
    <string name="activity_my_adverts">My adverts</string>
    <string name="activity_new_advert">New advert</string>
    <string name="activity_find_job">Find a job</string>
    <string name="activity_my_jobs">My jobs</string>

    <string name="registration_date">Registration date</string>

    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="old_password">Old password</string>

    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="address">Address</string>
    <string name="house_number">Number</string>
    <string name="street">Street</string>
    <string name="additional_address">Additional address information</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="postal_code">Postal code</string>
    <string name="country">Country</string>

    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="status">Status</string>
    <string name="posting_date">Posting date</string>
    <string name="completion_date">Completion date</string>
    <string name="advertiser_rating">Advertiser\'s rating</string>
    <string name="worker_rating">Worker\'s rating</string>
    <string name="rating">Your rating</string>
    <string name="comment">Comment</string>

    <string name="bids">Bids</string>
    <string name="bid">Your bid</string>
    <string name="new_bid">New bid</string>

    <!-- Messages -->
    <string name="msg_description_advertiser">Need help? Post a request!</string>
    <string name="msg_description_worker">Get money by helping people around you!</string>

    <string name="msg_choose_username">Please choose your username.</string>
    <string name="msg_password_updated">Password updated.</string>

    <string name="msg_delete_account">Delete account?</string>
    <string name="msg_delete_account_warning">(This operation can\'t be undone!)</string>

    <string name="msg_accept_bid">Accept this bid?</string>
    <string name="msg_reject_bid">Reject this bid?</string>
    <string name="msg_bid_not_number">Please enter a number!</string>

    <string name="msg_forgot_password">We just need your registered email address to send you password reset instructions.</string>
    <string name="msg_login_after_reset_password">We have sent you instructions to reset your password. Please check your email and log in!</string>

    <!-- Error messages -->
    <string name="msg_empty_email">Enter your email address!</string>
    <string name="msg_empty_password">Enter your password!</string>
    <string name="msg_empty_old_password">Enter your current password!</string>
    <string name="msg_empty_username">Enter your username!</string>
    <string name="msg_empty_first_name">Enter your first name!</string>
    <string name="msg_empty_last_name">Enter your last name!</string>
    <string name="msg_empty_street">Enter your street!</string>
    <string name="msg_empty_city">Enter your city!</string>
    <string name="msg_empty_postal_code">Enter your postal code!</string>
    <string name="msg_empty_country">Enter your country!</string>
    <string name="msg_empty_title">Please enter the advert\'s title!</string>
    <string name="msg_empty_bid">Please enter your bid!</string>

    <string name="msg_email_already_used">Email address already used!</string>
    <string name="msg_email_not_found">Email address not found!</string>
    <string name="msg_email_invalid">Invalid email address!</string>

    <string name="msg_minimum_password">Password is too short, enter at least 6 characters!</string>

    <string name="msg_username_already_used">Username already used!</string>

    <string name="msg_register_failed">Registration failed</string>
    <string name="msg_auth_failed">Authentication failed, check your email and password or register.</string>
    <string name="msg_reset_password_failed">Password reset failed</string>
    <string name="msg_choose_username_failed">Username registration failed</string>
    <string name="msg_edit_profile_failed">Profile change failed</string>
    <string name="msg_new_advert_failed">Advert creation failed</string>
    <string name="msg_edit_advert_failed">Advert change failed</string>

    <string name="msg_unknown_error">An unknown error occurred.</string>

    <!-- Buttons -->
    <string name="btn_login">Log in</string>
    <string name="btn_register">Register</string>

    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_register_link_to_login">Already registered? Log in!</string>
    <string name="btn_reset_link_to_login">Remember it? Log in!</string>

    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset password</string>

    <string name="btn_choose_username">Choose</string>

    <string name="btn_my_adverts">My adverts</string>
    <string name="btn_find_job">Find a job</string>
    <string name="btn_my_jobs">My jobs</string>
    <string name="btn_logout">Log out</string>

    <string name="btn_edit_profile">Edit</string>
    <string name="btn_delete_account">Delete account</string>

    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">DELETE</string>

    <string name="btn_new_advert">Post an advert</string>
    <string name="btn_post">Post</string>
    <string name="btn_bid">Bid</string>
    <string name="btn_cancel_bid">Cancel my bid</string>

    <string name="btn_completed_advert">Complete</string>
    <string name="btn_edit_advert">Edit</string>
    <string name="btn_cancel_advert">Cancel</string>

    <string name="btn_accept_bid">Accept</string>
    <string name="btn_reject_bid">Reject</string>

    <!-- Status -->
    <string name="available">Available</string>

    <string name="accepted">Accepted</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>

    <string name="completed">Completed</string>
    <string name="rated">Rated</string>

    <string name="canceled">Canceled</string>
    <string name="deleted">Deleted</string>

    <!-- Advert Tags -->
    <string name="tag_test">Test</string>
    <string name="tag_babysitting">Babysitting</string>
    <string name="tag_math_course">Math course</string>

    <!-- Preferences -->
    <string name="pref_email">email</string>
</resources>
