<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground">

    <View
        android:id="@+id/status_bar"
        android:layout_width="16dp"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_padding"
        android:paddingRight="@dimen/activity_padding"
        android:paddingTop="@dimen/element_margin_xsmall"
        android:paddingBottom="@dimen/element_margin_xsmall"
        android:orientation="vertical">

        <TextView
            style="@style/TextView.Info.NoMargin"
            android:text="@string/title" />

        <TextView
            style="@style/TextView.Element"
            android:id="@+id/title" />

        <TextView
            style="@style/TextView.Info"
            android:id="@+id/description_info"
            android:text="@string/description" />

        <TextView
            style="@style/TextView.Element"
            android:id="@+id/description" />

        <TextView
            style="@style/TextView.Info"
            android:id="@+id/status_info"
            android:text="@string/status" />

        <TextView
            style="@style/TextView.Element"
            android:id="@+id/status" />

        <TextView
            style="@style/TextView.Info"
            android:text="@string/posting_date" />

        <TextView
            style="@style/TextView.Element"
            android:id="@+id/posting_date" />

        <TextView
            style="@style/TextView.Element"
            android:id="@+id/due_date"
            android:visibility="gone" />

        <TextView
            style="@style/TextView.Info"
            android:id="@+id/completion_date_info"
            android:text="@string/completion_date" />

        <TextView
            style="@style/TextView.Element"
            android:id="@+id/completion_date" />

        <TextView
            style="@style/TextView.Info"
            android:id="@+id/advertiser_rating_info"
            android:text="@string/advertiser_rating" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextView.Element"
                android:id="@+id/advertiser_rate"
                android:layout_width="wrap_content" />

            <View
                style="@style/Line.Vertical"
                android:id="@+id/advertiser_line"
                android:layout_marginLeft="@dimen/element_margin_xsmall"
                android:layout_marginRight="@dimen/element_margin_xsmall" />

            <TextView
                style="@style/TextView.Element"
                android:id="@+id/advertiser_comment" />
        </LinearLayout>

        <TextView
            style="@style/TextView.Info"
            android:id="@+id/worker_rating_info"
            android:text="@string/worker_rating" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextView.Element"
                android:id="@+id/worker_rate"
                android:layout_width="wrap_content" />

            <View
                style="@style/Line.Vertical"
                android:id="@+id/worker_line"
                android:layout_marginLeft="@dimen/element_margin_xsmall"
                android:layout_marginRight="@dimen/element_margin_xsmall" />

            <TextView
                style="@style/TextView.Element"
                android:id="@+id/worker_comment" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
