<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ca.uqac.sosdoit.AdvertActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/element_advanced_toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding"
                android:orientation="vertical">

                <TextView
                    style="@style/TextView.Description.First"
                    android:id="@+id/aa_description_info"
                    android:text="@string/description"
                    android:visibility="gone" />

                <EditText
                    style="@style/EditText.NotEditable"
                    android:id="@+id/aa_description"
                    android:inputType="textMultiLine|textNoSuggestions"
                    android:visibility="gone" />

                <TextView
                    style="@style/TextView.Description"
                    android:text="@string/status" />

                <EditText
                    style="@style/EditText.NotEditable"
                    android:id="@+id/aa_status"
                    android:inputType="textNoSuggestions" />

                <TextView
                    style="@style/TextView.Description"
                    android:text="@string/posting_date" />

                <EditText
                    style="@style/EditText.NotEditable"
                    android:id="@+id/aa_posting_date"
                    android:inputType="date" />

                <TextView
                    style="@style/TextView.Description"
                    android:id="@+id/aa_completion_date_info"
                    android:text="@string/completion_date"
                    android:visibility="gone" />

                <EditText
                    style="@style/EditText.NotEditable"
                    android:id="@+id/aa_completion_date"
                    android:inputType="date"
                    android:visibility="gone"/>

                <TextView
                    style="@style/TextView.Description"
                    android:id="@+id/aa_bids_info"
                    android:text="@string/bids" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/aa_bids_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/element_margin_small"
                android:scrollbars="vertical"
                android:visibility="invisible" />
        </LinearLayout>

        <include layout="@layout/element_progress_bar_visible" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
