<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.uqac.sosdoit.ChooseUsernameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_padding"
        android:paddingRight="@dimen/activity_padding"
        android:orientation="vertical">

        <include layout="@layout/element_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/msg_choose_username" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/element_margin_large">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionDone"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <Button
            style="@style/Button.Primary"
            android:id="@+id/choose"
            android:layout_marginTop="@dimen/element_margin_large"
            android:text="@string/btn_choose_username" />

        <include layout="@layout/element_progress_bar" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
