<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="ca.uqac.sosdoit.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/activity_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">

            <include layout="@layout/element_advanced_toolbar" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatButton
                    style="@style/Button.Primary.Fill"
                    android:id="@+id/btn_my_adverts"
                    android:layout_marginTop="@dimen/activity_padding"
                    android:text="@string/btn_my_adverts" />

                <android.support.v7.widget.AppCompatButton
                    style="@style/Button.Primary.Fill"
                    android:id="@+id/btn_find_job"
                    android:text="@string/btn_find_job" />

                <android.support.v7.widget.AppCompatButton
                    style="@style/Button.Primary.Fill"
                    android:id="@+id/btn_my_jobs"
                    android:text="@string/btn_my_jobs" />
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/element_progress_bar_visible" />
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
